module-3, task 7, add hide-show password toggle to login form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "checkJs": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -29,7 +30,7 @@
     "strictPropertyInitialization" : true,
     "noImplicitThis" : true,
     "useUnknownInCatchVariables" : true,
-    "alwaysStrict" : true,
+    "alwaysStrict" : false,
     "exactOptionalPropertyTypes" : true,
     "noUncheckedIndexedAccess" : true,
     "isolatedModules": true,
