--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "lint": "eslint src --fix",
     "test": "jest --maxWorkers 2"
   },
   "private": true,
@@ -33,6 +34,9 @@
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jest": "^29.5.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.50.0",
     "jest": "^29.5.0",
     "jest-preset-angular": "^13.1.1",
     "typescript": "~4.9.4"
